web-infras/parser/tests/fixtures/babel/core/scope/dupl-bind-class-var/output.txt
[SyntaxError]: Identifier has already been declared. (2,5)
2|var foo;
 |   ^
